ingressSession/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-1

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1

  template:
    metadata:
      labels:
        app: app1

    spec:
      containers:
      - name: app1-container
        image: hashicorp/http-echo
        args:
        - "-text=welcome app from app1 Deployment pod"

        ports:
        - containerPort: 5678
