ingressSession/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc

spec:
  type: ClusterIP
  selector:
    app: app1

  ports:
  - port: 80
    targetPort: 5678
