ingressSession/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-svc

spec:
  type: ClusterIP
  selector:
    app: app2

  ports:
  - port: 80
    targetPort: 5678
